[gd_scene load_steps=3 format=3 uid="uid://cjlp6cp6j6dmi"]

[ext_resource type="Script" uid="uid://vqjfk8li4w1v" path="res://pages/level_editor/save_panel/save_panel.gd" id="1_akvb1"]
[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="2_8272o"]

[node name="SavePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8272o")
script = ExtResource("1_akvb1")

[node name="BigPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SmallPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.331
anchor_top = 0.13
anchor_right = 0.669
anchor_bottom = 0.87
offset_left = -0.520081
offset_top = -0.400009
offset_right = 0.519897
offset_bottom = 0.399902

[node name="SaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.409
anchor_top = 0.176
anchor_right = 0.591
anchor_bottom = 0.231
offset_left = -0.280029
offset_top = -0.0800171
offset_right = 0.279907
offset_bottom = 0.519989
theme_override_font_sizes/font_size = 48
text = "-- Save Level --"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.258
anchor_right = 0.427
anchor_bottom = 0.305
offset_left = -0.480042
offset_top = 0.359985
offset_right = 0.159973
offset_bottom = -0.399994
theme_override_font_sizes/font_size = 30
text = "Title:"
horizontal_alignment = 2

[node name="CommentsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.328
anchor_right = 0.427
anchor_bottom = 0.374
offset_left = -0.480042
offset_top = -0.240021
offset_right = 0.159973
offset_bottom = 0.0799866
theme_override_font_sizes/font_size = 30
text = "Comments:"
horizontal_alignment = 2

[node name="TitleEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.443
anchor_top = 0.258
anchor_right = 0.651
anchor_bottom = 0.305
offset_left = -0.560059
offset_top = 0.359985
offset_right = 0.0799561
offset_bottom = -0.399994
placeholder_text = "Type your level name here."

[node name="DescriptionEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.443
anchor_top = 0.328
anchor_right = 0.651
anchor_bottom = 0.652
offset_left = -0.560059
offset_top = -0.240021
offset_right = 0.0799561
offset_bottom = -0.160034
placeholder_text = "Type descriptions of your level here."
wrap_mode = 1

[node name="PublishCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.573
anchor_top = 0.675
anchor_right = 0.651
anchor_bottom = 0.721
offset_left = -0.160034
offset_right = 0.0799561
offset_bottom = 0.320007
tooltip_text = "Publish your level to be visible in \"Explore\" tab in level editor by other palyers!"
button_pressed = true
text = "Publish?"
alignment = 1

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.349
anchor_top = 0.778
anchor_right = 0.466
anchor_bottom = 0.824
offset_left = -0.0800171
offset_top = -0.240051
offset_right = 0.279968
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2
text = "Save"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.534
anchor_top = 0.778
anchor_right = 0.651
anchor_bottom = 0.824
offset_left = -0.280029
offset_top = -0.240051
offset_right = 0.0799561
offset_bottom = 0.0799561
text = "Cancel"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="toggled" from="PublishCheckBox" to="." method="_on_publish_check_box_toggled"]
